# crudx

./: Cargo.toml  README.md
src/: executor.rs  filter.rs  lib.rs
src/model/: macros.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
