[package]
name = "crudx"
version = "1.1.0"
authors = ["lipogem"]
edition = "2021"
license = "MIT"
description = "sql crud"
repository = "https://github.com/lipogem/crudx"
readme = "README.md"
keywords = ["crud", "orm", "sql", "database"]

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
mssql = ["tiberius"]
async_trait = ["async-trait"]

[dependencies]
anyhow = "1"
futures-util = { version = "0", default-features = false, features = ["io"] }
sqlx = { version = "0", default-features = false, optional = true }
tiberius = { version = "0", default-features = false, optional = true }
async-trait = { version = "0", optional = true }
